[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-deepinfra"
version = "0.1.0"
description = "An integration package connecting DeepInfra and LangChain"
authors = [{ name = "DeepInfra" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["langchain", "deepinfra", "llm", "embeddings", "rerank"]
dependencies = [
    "langchain-openai>=1,<2",
    "langchain-core>=1,<2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/deepinfra/langchain-deepinfra"
Repository = "https://github.com/deepinfra/langchain-deepinfra"
"Release Notes" = "https://github.com/deepinfra/langchain-deepinfra/releases"
"Source Code" = "https://github.com/deepinfra/langchain-deepinfra/tree/main/langchain_deepinfra"

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-socket>=0.7",
    "syrupy>=4",
    "langchain-tests>=1,<2",
    "respx>=0.21",
]
lint = ["ruff>=0.6"]
typing = ["mypy>=1.10"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typing" },
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_deepinfra"]

[tool.pytest.ini_options]
addopts = "--strict-markers -q"
asyncio_mode = "auto"
markers = [
    "compile: compile-only smoke marker",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
